--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,30 @@
 cmake_minimum_required(VERSION 3.1.3)
 project(ur5_moveit)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  std_msgs
+  tf
+)
 
-catkin_package()
+catkin_package(
+  INCLUDE_DIRS include
+  #LIBRARIES tf
+  CATKIN_DEPENDS roscpp rospy std_msgs
+)
+
+include_directories(
+ include
+  ${catkin_INCLUDE_DIRS}
+)
+catkin_install_python(PROGRAMS
+  scripts/publisharucotfreal.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 catkin_install_python(PROGRAMS
-  scripts/publisharucotf.py
+  scripts/publisharucotfsimu.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
