--- a/package.xml
+++ b/package.xml
@@ -39,6 +39,7 @@
   <exec_depend>ur_description</exec_depend>
   
   <build_depend>roscpp</build_depend>
+  <build_depend>rosbag</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
